# metric

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: comprehensive_lists.metric  demo.metric  factorial.metric  fibonacci.metric  functions_demo.metric  lists_demo.metric  logical_not_demo.metric  logical_operators_demo.metric
examples/sorting/: mergesort.metric  quicksort.metric  selectionsort.metric
metric/: __init__.py  __main__.py  errors.py  evaluator.py  metric_ast.py  parser.py  style_validator.py  test_runner.py  tokenizer.py  type_checker.py  visitor.py
test/: test_evaluator.py  test_list_features.py  test_parser.py  test_style.py  test_tokenizer.py  test_type_system.py  test_utils.py
